styles.css
html,body{
    background:#111113;
    display: flex;
    justify-content: center;
    font-family: Product Sans;
}

::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}

::-webkit-scrollbar-track {
    background: transparent;
    display: none;
}

::-webkit-scrollbar-thumb {
    background: #252729;
    transition: 0.2s;
    border-radius: 10px;
    z-index: 5;
}

*{
    font-family: "Manrope", sans-serif;
}

.container{
    width:90vw;
    max-width: 900px;
    display: flex;
    flex-direction: column;
    position: relative;
    height:calc(100vh - 32px);
    padding-top: 64px;
    box-sizing: border-box;
    align-items: center;
}

.welcome{
    display: flex;
    position: absolute;
    flex-direction: column;
    align-items: center;
    top:300px;
    left:50%;
    transform: translateX(-50%);
    z-index: 5;
}

.title{
    display: flex;
    flex-direction: row;
    gap:16px;
    align-items: center;
    justify-content: center;
    margin-bottom: 16px;
}

.sub_title{
    font-size: 20px;
    color:#D9D8D8;
    margin-bottom: 8px;
}

h1{
    color:#f0f0f0;
    font-size: 48px;
    margin:0;

}

.google_text{
    font-family: "Poppins", sans-serif !important;
    font-weight: 500;
}

.fancy_text{
    font-weight: bolder;
    background-image: linear-gradient(45deg, #425FC4, #397BE1,#3096FC);
    -webkit-background-clip: text; /* Clip the text to the background */
    background-clip: text;
    color: transparent; 
}

.message-container{
    width:100%;
    height:100%;
    display: flex;
    flex-direction: column;
    gap:32px;
    max-height: 80%;
    overflow-y: scroll;
}

.lower_buttons{
    position: absolute;
    bottom: 16px;
    width: 80%;
    display: flex;
    flex-direction: column;
    gap:8px;
    background-color: #252729;
    padding: 8px 12px;
    border-radius: 32px;
}

.bottom_text{
    color:#c0c0c0;
    font-size: 12px;
    text-align: center;
    position: absolute;
    bottom: -16px;
    width: 80%;
}


.bottom_text_local{
    position: absolute;
    left:50%;
    bottom:0px;
    transform: translateX(-50%);
    
}

.lower_buttons > .buttons{
    width:100%;
    display: flex;
    gap:8px;
    align-items: center;
    justify-content: center;
}

.lower_buttons > .buttons > button{
    min-width:32px !important;
    padding: 0px !important;
    height:32px;
    border-radius: 20px;
    border:none;
    background-color: #252729;
    color:#f0f0f0;
    display: flex;
    gap:8px;
    cursor: pointer;
    justify-content: center;
    align-items: center;
    transition: .2s background-color;
    font-size:20px;
}



.send_button{
    border:none !important;
    background:#fff !important;
}

.send_button > svg{
    fill: #252729;
    height: 18px;
    width: 18px;
}

.send_button > svg > path{
    fill: #252729;
}

.send_button:disabled{
    background:#686868 !important;
    cursor: not-allowed !important;

}

.lower_buttons > .buttons> input{
    width:100%;
    border-radius: 20px;
    border:none;
    background-color: #252729;
    color:#f0f0f0;
    padding:8px 15px;
    height:40px;
    box-sizing: border-box;
    font-size: 16px;
}

.lower_buttons > .buttons> input:focus{
    outline:none;
}

.message{
    color:#f0f0f0;
    word-wrap: break-word;
    position: relative;

}

.user_icon  svg{
    width:16px;
    height:16px;
    fill: #5593F0;
}

.user_icon svg > path{
    fill: #5593F0;
}

.message > div{
    display: flex;
    gap:16px;
    align-items: center;
    margin-bottom: 8px;
}

.message > div > span{
    background-color: #2A3642;
    width:24px;
    height:24px;
    font-size: 14px;
    display: block;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 16px;
    color:#55B8F0;
    background-color: #2a3042;
}

.modal > svg{
    width:16px;
    height:16px;
    fill: #f0b255;
}

.modal > svg > path{
    fill: #f0b255;
}

.user_icon{
    width: 14px;
    height:14px;
    fill: #55B8F0;
}

.modal{
    color: #f0b255 !important;
    background-color: #42412A !important;
}



.message > div > type{
    font-weight: 600;
}

.message  > p{
    margin:0;
    margin-left:40px;
    line-height: 1.5;
    display: flex;
    gap: 16px;
    flex-direction: column;
}

.message  > p:has(img){
    flex-direction: row;
}

@keyframes examples_load {
    from{
        opacity:0;
        transform: translateY(20px);
    }
    to{
        opacity:1;
        transform: translateY(0);
    }
}

.examples{
    height:40px;
    position: absolute;
    bottom: 64px;
    width: 100%;
    display: flex;
    justify-content: center;
    gap:8px;
    animation: examples_load .6s;
}

.examples > button{
    width:100%;
    background-color: #252729;
    border:none;
    border-radius: 8px;
    display: flex;
    gap:16px;
    justify-content: center;
    align-items: center;
    color:#f0f0f0;
    cursor: pointer;
    transition: .2s background-color;
    font-size: 14px;

}

.examples > button > img{
    height: 24px;
    width: 24px;
}

.examples > button:hover{
    background-color: #333539;
}

.examples > :first-child{
    border-radius:20px 8px 8px 20px;
}

.examples > :last-child{
    border-radius:8px 20px 20px 8px;
}

.logo{
    position: absolute;
    top:32px;
    left:32px;
    display: none;
    gap:8px;
    color: #D9D8D8;
    align-items: center;
    font-size: 14px;
}

.image_loading{
    background-color: #252729;
    display: block;
    width: 272px;
    border-radius: 16px;
    padding:16px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap:8px;
    color:#f0f0f0;
    margin-left: 30px;
    margin-top: 16px;
}


@keyframes slide-in {
    0% { transform: translateX(-100%); }
    100% { transform: translateX(100%); }
}


  @keyframes slideGradient {
    0% {
      background-position: 0% 0%;
    }
    100% {
      background-position: -100% 0%;
    }
  }
  
@keyframes loading_dots {
    from{
        transform: translateY(4px);
    }
    50%{
        transform: translateY(-4px);
    }
    to{
        transform: translateY(4px);
    }
}




.search{
    margin-left: 40px;
    display: flex;
    gap:8px;
    align-items: center;
    font-size: 14px;
    background: linear-gradient(to right, #8fadff, #00eafa);
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
}

.search > svg{
    width: 16px;
    height: 16px;
}

.search > svg > path{
    width: 14px;
    height: 14px;
    fill: #8fadff;
}

.genning{
    background:linear-gradient(to right, #f28fff, #d000fa) !important;
    -webkit-background-clip: text !important;
    background-clip: text !important;
    -webkit-text-fill-color: transparent !important;
}

.genning > svg > path{
    fill: #f28fff !important;
}

.genning > svg{
    width: 16px;
    height: 16px;
}

.done{
    background:linear-gradient(to right, #8fffa2, #00fa21) !important;
    -webkit-background-clip: text !important;
    background-clip: text !important;
    -webkit-text-fill-color: transparent !important;
}

.done > svg> path{
    fill: #8fffa2 !important;
}

.done > svg{
    width: 16px;
    height: 16px;
}

.search_URL{
    background: #27282B;
    border: 1px solid #333539;
    color: #f0f0f0;
    padding: 4px 8px;
    text-decoration: none;
    align-items: center;
    justify-content: center;
    gap: 8px;
    display: none;
    font-size: 12px;
    border-radius: 14px;
    margin-left: 40px;
    cursor: pointer;
    transition: .2s border-color;
}

.search_URL:hover{
    border-color: #397BE1;
}

.search_URL > img{
    width: 14px;
    height: 14px;
    border-radius: 2px;
}

.message pre{
    background:#252729;
    border-radius: 16px;
    padding:16px;
}

.message pre:focus{
    outline: none;
}


.side_bar_tools > tool > .powered{
    color:#9F9F9F;
    font-size: 10px;
    text-align: right;
    margin-top:16px;
}

.pre_prompts{
    display: flex;
    gap:16px;
    margin-top: 32px;
}

.pre_prompts > div{
    background-color: #252729;
    border-radius: 16px;
    padding:12px;
    display: flex;
    height:80px;
    width: 150px;
    cursor: pointer;
    flex-direction: column;
    color:#f0f0f0;
    gap:8px;
}

.pre_prompts > div:hover{
    background-color: #2c2e30;
}

.pre_prompts > div > p{
    margin:0px;
    font-size: 14px;
}

.pre_prompts svg{
    width: 24px;
    height: 24px;
}





table{
    border: 1px solid #494c4f;
    padding: 08px;
    border-radius: 16px;
    margin-top:8px;
}

.ai_guide{
    width:700px;
    padding: 0px;
    border:none;
    border-radius: 32px;
    overflow: hidden;
    background-color: #282D33;
    animation: view_image_load .4s;
    padding:32px;
    color:#f0f0f0;
}

.ai_guide a{
    color: #b5c3ff;
    cursor: pointer;
}

.ai_guide a:hover{
    color: #9caeff;
}

.ai_guide a:focus{
    outline: none;
    color: #9caeff;
}

.ai_guide h2{
    font-size: 24px;
    margin:0;

}

.ai_guide p{
    margin:4px;
    color: #d8d8d8;
    font-size: 14px;
}

.ai_guide li{
    margin:6px;
    color: #f0f0f0;
    font-size: 15px;
}

.ai_guide:focus{
    outline: none;
}

.ai_guide::backdrop{
    background-color: #000000bd;
    transition: .4;
}

